Added full stock and crypto data csvs to Resources and updated stock and crypto compare ipynb file

--- a/merged_price_data.ipynb
+++ b/merged_price_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4  2015-12-11  2.360"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4 2015-12-11      2.360       32.49     14.04"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,13 +233,13 @@
     "merged_stocks.rename(columns={'close_x': 'close_amd', 'close_y': 'close_nvda','close': 'close_mu'}, inplace=True)\n",
     "merged_stocks.sort_values('date',ascending=True,inplace=True)\n",
     "merged_stocks['date'] =  pd.to_datetime(merged_stocks['date'])\n",
-    "# merged_stocks.dtypes\n",
+    "merged_stocks.to_csv(\"Resources/all_stock_data.csv\", header=True, index=False)\n",
     "merged_stocks.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "5         2.5  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
     "all_crypto_df = pd.merge(merged_crypto1, merged_crypto2, on=\"date\", how=\"outer\")\n",
     "all_crypto_df.dropna(how='any',inplace=True)\n",
     "all_crypto_df['date'] =  pd.to_datetime(all_crypto_df['date'])\n",
-    "# all_crypto_df.dtypes\n",
+    "all_crypto_df.to_csv(\"Resources/all_crypto_data.csv\", header=True, index=False)\n",
     "all_crypto_df.head()"
    ]
   },
