--- a/GPU_DF.ipynb
+++ b/GPU_DF.ipynb
@@ -881,32 +881,11 @@
    "outputs": [],
    "source": [
     "#Creating Data Frames Per GPU Type\n",
-    "# df_1060 = pd.DataFrame({\"EVGA 1060\": gpu_df['EVGA_1060'],\n",
-    "#                        \"ASUS 1060\": gpu_df['ASUS_1060'],\n",
-    "#                        \"PNY 1060\":gpu_df['PNY_1060']}).dropna(how='all')\n",
-    "# df_1070 = pd.DataFrame({\"Nvidia 1070\": gpu_df['Nvidia_1070'],\n",
-    "#                        \"MSI 1070\": gpu_df['MSI_1070'],\n",
-    "#                        \"EVGA 1070\":gpu_df['EVGA_1070']}).dropna(how='all')\n",
-    "# df_1070_ti = pd.DataFrame({\"ASUS 1070 Ti\": gpu_df['ASUS_1070_Ti'],\n",
-    "#                        \"EVGA 1070 Ti\": gpu_df['EVGA_1070_Ti'],\n",
-    "#                        \"Gigabyte 1070 Ti\":gpu_df['Gigabyte_1070_Ti']}).dropna(how='all')\n",
     "df_1080_ti = pd.DataFrame({\"Nvidia 1080 Ti\": gpu_df['Nvidia_1080_Ti'],\n",
     "                       \"ASUS 1080 Ti\": gpu_df['ASUS_1080_TI'],\n",
     "                       \"Gigabyte 1080 Ti\":gpu_df['Gigabyte_1080_Ti']}).dropna(how='all')\n",
-    "# df_580 = pd.DataFrame({\"MSI 580\": gpu_df['MSI_580'],\n",
-    "#                        \"Gigabyte 580\": gpu_df['Gigabyte_580'],\n",
-    "#                        \"XFX 580\":gpu_df['XFX_580']}).dropna(how='all')\n",
-    "# df_56 = pd.DataFrame({\"Asus Vega 56\": gpu_df['ASUS_Vega_56'],\n",
-    "#                        \"MSI Vega 56\": gpu_df['MSI_Vega_56'],\n",
-    "#                        \"PowerColor Vega 56\":gpu_df['PowerColor_Vega_56']}).dropna(how='all')\n",
-    "\n",
     "#Need to set index format same as crypto data df\n",
-    "# df_1060.index =  pd.to_datetime(df_1060.index)\n",
-    "# df_1070.index =  pd.to_datetime(df_1070.index)\n",
-    "# df_1070_ti.index =  pd.to_datetime(df_1070_ti.index)\n",
-    "df_1080_ti.index =  pd.to_datetime(df_1080_ti.index)\n",
-    "# df_580.index =  pd.to_datetime(df_580.index)\n",
-    "# df_56.index =  pd.to_datetime(df_56.index)"
+    "df_1080_ti.index =  pd.to_datetime(df_1080_ti.index)"
    ]
   },
   {
@@ -1055,14 +1034,10 @@
    ],
    "source": [
     "#Merge DF's With Crypto Data\n",
-    "# merge_1060 = pd.merge(df_1060, crypto_data_df, on=\"date\", how='left').set_index('date')\n",
-    "# merge_1070 = pd.merge(df_1070, crypto_data_df, on=\"date\", how='left').set_index('date')\n",
-    "# merge_1070_ti = pd.merge(df_1070_ti, crypto_data_df, on=\"date\", how='left').set_index('date')\n",
     "merge_1080_ti = pd.merge(df_1080_ti, crypto_data_df, on=\"date\", how='left').set_index('date')\n",
-    "# merge_580 = pd.merge(df_580, crypto_data_df, on=\"date\", how='left').set_index('date')\n",
-    "# merge_56 = pd.merge(df_56, crypto_data_df, on=\"date\", how='left').set_index('date')\n",
-    "merge_1080_ti.head()\n",
+    "#Making new DF with just data from same weekday to produce weekly data\n",
     "only_mondays_df = merge_1080_ti[merge_1080_ti['weekday'] == 1]\n",
+    "#calculating pct chg for weekly data\n",
     "pct_chg_df = only_mondays_df.pct_change()\n",
     "pct_chg_df.head()"
    ]
