--- a/final_analysis_cryptos-vs-stocks.ipynb
+++ b/final_analysis_cryptos-vs-stocks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "code_folding": [
      0
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "code_folding": [
      0
@@ -67,20 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# wkly_stock_df.head()\n",
-    "#wkly_crypto_df.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {
     "code_folding": [
      0
@@ -171,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {
     "code_folding": [
      0
@@ -199,20 +185,21 @@
     "ax.plot(wkly_crypto_df)\n",
     "plt.xticks(rotation=50)\n",
     "fig.legend(['BTC','XRP','ETH','LTC','EOS','DASH'],bbox_to_anchor=(1.2, 1.0))\n",
-    "fig.tight_layout() "
+    "fig.tight_layout() \n",
+    "fig.savefig(\"Images/wkly_pct_chg_crypto.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stocks Price and the S& P¶\n",
+    "### NVDA Stock vs. the S& P¶\n",
     "* NVDA prices closely followed the S&P 500, but had a greater incread/decrease in percent change."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {
     "code_folding": [
      0
@@ -260,11 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -288,14 +273,15 @@
     "ax.plot(wkly_stock_df)\n",
     "plt.xticks(rotation=50)\n",
     "fig.legend(['NVDA','S&P 500'],bbox_to_anchor=(1.2, 1.0))\n",
-    "fig.tight_layout() "
+    "fig.tight_layout() \n",
+    "fig.savefig(\"Images/wkly_pct_chg_stock.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cryptos and NVDA stock¶\n",
+    "### NVDA Stock vs. Cryptos\n",
     "* BTC peaks in Dec 2018 while the stocks continue to rise until Oct 2018.\n",
     "* BTC continues to fall along with stock prices after Oct 2018.\n",
     "* ETH follows a similar pattern to BTC, but peaks slightly later in Jan 2018 before it begins a significant drop.\n",
@@ -305,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {
     "code_folding": [
      0
@@ -350,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {
     "code_folding": [
      0
@@ -394,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {
     "code_folding": [
      0
@@ -424,12 +410,13 @@
     "ax.tick_params(axis='y')\n",
     "plt.xticks(rotation=50)\n",
     "fig.legend(bbox_to_anchor=(1.2, 1.0))\n",
-    "fig.tight_layout() "
+    "fig.tight_layout() \n",
+    "fig.savefig(\"Images/wkly_pct_chg_nvda_btc.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {
     "code_folding": [
      0
@@ -459,7 +446,8 @@
     "ax.tick_params(axis='y')\n",
     "plt.xticks(rotation=50)\n",
     "fig.legend(bbox_to_anchor=(1.2, 1.0))\n",
-    "fig.tight_layout() "
+    "fig.tight_layout() \n",
+    "fig.savefig(\"Images/wkly_pct_chg_nvda_eth.png\")"
    ]
   },
   {
