--- a/data_exploration_cleanup.ipynb
+++ b/data_exploration_cleanup.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "#### Keepa API for daily prices of video cards\n",
-    "* Mason to provide"
+    "* https://keepa.com/#!data"
    ]
   },
   {
@@ -27,6 +27,7 @@
    "metadata": {},
    "source": [
     "#### Crypto Compare API for daily cryptocurrency prices\n",
+    "https://min-api.cryptocompare.com/documentation?key=Historical&cat=dataHistoday\n",
     "* API calls were made to get daily price data for BTC, XRP, ETH, LTC, EOS, DASH\n",
     "* This responses contained three years of data of open high, low, close data for the above cryptos.\n",
     "* The data was exported into a csv file for each cryptocurrency\n",
@@ -149,7 +150,9 @@
     "#### Nasdaq for daily stock prices for companies that manufacturer video cards<br><br>https://www.nasdaq.com/quotes/historical-quotes.aspx\n",
     "* Downloaded daily csv files with daily open, high, low, close for AMD, NVDA, and MU.\n",
     "* The transformations to the data were:<br>1) Removed open, high, low prices since we only needed close<br>2) Removed data prior to 2017\n",
-    "* The final cleaned version was one csv file with the date and closing prices for the three stocks from Jan 2017 - Dec 2018."
+    "* The final cleaned version was one csv file with the date and closing prices for the three stocks from Jan 2017 - Dec 2018.\n",
+    "* Added daily data from the S&P 500 via csv download.\n",
+    "https://us.spindices.com/indices/equity/sp-500"
    ]
   },
   {
@@ -227,25 +230,6 @@
     "stock_df = pd.read_csv(stock_data)\n",
     "stock_df.head(3)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
