--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "## Project Overview\n",
-    "With the increased interest in mining cryptocurrencies over the last few years, we are interested in whether the price of hardware used in mining cryptocurrencies is related to the price fluctuations in the cryptocurrencies themselves.  We chose to limit the scope of this analysis to the top three graphics cards used for mining and six popular cryptocurrencies.  The project evaluates price changes in the graphics cards against price changes in cryptocurrencies over the last two years.  The expectation is that there is a correlation between the prices changes in the hardware and the cryptocurrencies.  Stock price changes for the companies , that manufacture graphics cards will also be compared to cryptocurrency price changes as well as the S&P 500.\n",
+    "With the increased interest in mining cryptocurrencies over the last few years, we are interested in whether the price of hardware used in mining cryptocurrencies is related to the price fluctuations in the cryptocurrencies themselves.  We chose to limit the scope of this analysis to the top three graphics cards used for mining and six popular cryptocurrencies.  The project evaluates price changes in the graphics cards against price changes in cryptocurrencies over the last two years.  The expectation is that there is a correlation between the prices changes in the hardware and the cryptocurrencies.  Stock price changes for the companies that manufacture graphics cards will also be compared to cryptocurrency price changes as well as the S&P 500.\n",
     "\n",
-    "### Data \n",
+    "### Data Scope\n",
     "The final analysis included data from the Jan 2017 - Dec 2018 for the following:\n",
     "* GPU prices for three video cards:  Nvidia 1080 Ti, ASUS 1080 Ti, and Gigabyte 1080 Ti\n",
     "* Cryptocurrency prices for six cryptos:  Bitcoin, Litecoin, Ripple, Ethereum, Dash, EOS\n",
@@ -21,6 +21,12 @@
     "### Out of Scope\n",
     "* This is not an analysis of total cost of mining.  This analysis does not factor in all types of hardware used for mining, electricity, difficulty levels, etc.  \n",
     "\n",
+    "### Data Sources and Exploration\n",
+    "http://lhost:8903/notebooks/data_exploration_cleanup.ipynb<br>\n",
+    "http://localhost:8903/notebooks/gpu_crypto_charts_MW.ipynb<br>\n",
+    "http://localhost:8903/notebooks/product_price_history.ipynb<br>\n",
+    "http://localhost:8903/notebooks/final_analysis_cryptos-vs-stocks.ipynb\n",
+    "\n",
     "### Conclusions\n",
     "* NVDA stock price changes correlate more closely with the S&P 500 than with the six cryptocurrencies prices during the time analyzed. \n",
     "* Cryptocurrencies had more dramatic price changes than both the S&P 500 and NVDA stock prices.\n",
@@ -30,11 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ![Title](Images/daily_prices_btc_stocks.png)\n",
     "from IPython.display import Image"
    ]
   },
@@ -124,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,18 +139,18 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image('All GPU % Change.png')"
+    "Image('Images/All GPU % Change.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,18 +160,18 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image('All GPU % Change vs Crypto % Change.png')"
+    "Image('Images/All GPU % Change vs Crypto % Change.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,18 +181,18 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image('Each GPU v Crypto % Change.png')"
+    "Image('Images/Each GPU v Crypto % Change.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +202,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,13 +210,6 @@
    "source": [
     "Image(\"Images/daily_prices_crypto.png\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -265,9 +263,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (work_oct2018)",
+   "display_name": "my_environment",
    "language": "python",
-   "name": "work_oct2018"
+   "name": "my_environment"
   },
   "language_info": {
    "codemirror_mode": {
@@ -279,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
